k8s/ingress-internal.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx-internal-static
  rules:
  - http:
      paths:

      - path: /app1(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: books-service
            port:
              number: 80

      - path: /app2(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: universities-service
            port:
              number: 80

      - path: /app3(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: news-service
            port:
              number: 80

      - path: /app4(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: movies-service
            port:
              number: 80



#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: webapi
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"                     # Enforce HTTPS
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"               # Force HTTP to HTTPS
#    nginx.ingress.kubernetes.io/proxy-body-size: "10m"                   # Limit request size
#    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"              # Set connection timeout
#    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"                 # Set read timeout
#    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"                 # Set send timeout
#    nginx.ingress.kubernetes.io/enable-modsecurity: "true"               # Enable ModSecurity for WAF
#    nginx.ingress.kubernetes.io/enable-owasp-modsecurity-crs: "true"     # Enable OWASP ModSecurity rules
#
#spec:
#  ingressClassName: nginx-internal-static
#  rules:
#  - http:
#      paths:
#      - path: /app1(/|$)(.*)
#        pathType: Prefix
#        backend:
#          service:
#            name: books-service
#            port:
#              number: 80
#
#      - path: /app2(/|$)(.*)
#        pathType: Prefix
#        backend:
#          service:
#            name: universities-service
#            port:
#              number: 80
#
#      - path: /app3(/|$)(.*)
#        pathType: Prefix
#        backend:
#          service:
#            name: news-service
#            port:
#              number: 80
#
#      - path: /app4(/|$)(.*)
#        pathType: Prefix
#        backend:
#          service:
#            name: movies-service
#            port:
#              number: 80
#
#  tls:
#  - hosts:
#    - yourdomain.com  # Replace with your domain
#    secretName: your-tls-secret  # Ensure a valid TLS secret is set up
